force-app/main/default/objects/Tracecode_Matrix_Table__c/Tracecode_Matrix_Table__c.object-meta.xml
<CustomObject>
    <description>Table for the Tracecode Data Matrix</description>
    <label>Tracecode Matrix Table</label>
    <nameField>
        <displayFormat>TMN{000}</displayFormat>
        <label>Tracecode Matrix Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracecode Matrix Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>