force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/Character_Length__c.field-meta.xml
<CustomField>
    <fullName>Character_Length__c</fullName>
    <label>Character Length</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>