force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/COLD_STORAGE__c.field-meta.xml
<CustomField>
    <fullName>COLD_STORAGE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COLD STORAGE</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>