force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Factory</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>