force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/POPUP_UPC_CODE__c.field-meta.xml
<CustomField>
    <fullName>POPUP_UPC_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POPUP UPC CODE</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>