force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/Position_1__c.field-meta.xml
<CustomField>
    <fullName>Position_1__c</fullName>
    <description>Value of first character of the manufacturing code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Position 1</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>