force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Line Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>