force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Line Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>