force-app/main/default/objects/Tracecode_Matrix_Table__c/fields/Production_Location__c.field-meta.xml
<CustomField>
    <fullName>Production_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Production Location</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>