force-app/main/default/objects/Tracecode_Matrix_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Production_Location__c</columns>
    <columns>Product_Line_Code__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>